--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -18,4 +18,22 @@
 		<url-pattern>/rest/*</url-pattern>
 	</servlet-mapping>
 
+	<security-constraint>
+		<display-name>Secure REST</display-name>
+		<web-resource-collection>
+			<web-resource-name>Hello REST Service</web-resource-name>
+			<url-pattern>/*/*</url-pattern>
+			<http-method>GET</http-method>
+			<http-method>PUT</http-method>
+			<http-method>POST</http-method>
+			<http-method>DELETE</http-method>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>basicRestUser</role-name>
+		</auth-constraint>
+		<user-data-constraint>
+			<transport-guarantee>CONFIDENTIAL</transport-guarantee>
+		</user-data-constraint>
+	</security-constraint>
+
 </web-app>
